[gd_scene load_steps=6 format=2]

[ext_resource path="res://DialogNewBuilding.gd" type="Script" id=1]
[ext_resource path="res://9SliceBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/Interface/EDUCAÇÃO.png" type="Texture" id=3]
[ext_resource path="res://fonts/new_building_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://OKButton.tscn" type="PackedScene" id=5]

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = -203.5
margin_right = 204.0
margin_bottom = 203.5
rect_pivot_offset = Vector2( 310, 150 )
script = ExtResource( 1 )

[node name="9SliceBox" parent="." instance=ExtResource( 2 )]
margin_left = -282.0
margin_top = -282.5
margin_right = 288.0
margin_bottom = 217.5

[node name="TextureRect2" type="TextureRect" parent="9SliceBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.5
margin_top = -226.0
margin_right = 148.5
margin_bottom = -15.0
rect_pivot_offset = Vector2( 153.332, 48.1302 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="9SliceBox"]
margin_left = 78.0
margin_top = 248.0
margin_right = 483.0
margin_bottom = 470.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="9SliceBox/VBoxContainer"]
margin_right = 405.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Precisamos de um hospital"
align = 1

[node name="Label2" type="Label" parent="9SliceBox/VBoxContainer"]
margin_top = 32.0
margin_right = 405.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec justo venenatis, ornare Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec justo venenatis, ornare "
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="9SliceBox/VBoxContainer"]
margin_top = 188.0
margin_right = 405.0
margin_bottom = 188.0
alignment = 1

[node name="OKButton" parent="9SliceBox/VBoxContainer" instance=ExtResource( 5 )]

[connection signal="pressed" from="9SliceBox/VBoxContainer/OKButton" to="." method="_on_OKButton_pressed"]
